[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5" #{ version = "0.8.5", features = ["wasm-bindgen"] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
